# memini-cli-nondev

./: Cargo.toml  README.md  mcp.json  rice.config.toml
.github/workflows/: release.yml
docs/: agents.md  commands.md  getting-started.md  mcp.md  rice.md
prompts/: execution_style.md  orchestration_rules.md
src/: constants.rs  main.rs  openai.rs  rice.rs  util.rs
src/app/: agents.rs  chat.rs  commands.rs  daemon.rs  input.rs  mod.rs  ui.rs
src/app/commands/: daemons.rs  mcp.rs  mod.rs  openai.rs
src/mcp/: config.rs  mod.rs  oauth.rs
