[package]
name = "memini-cli-nondev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
crossterm = "0.28"
dotenvy = "0.15"
directories = "5.0"
rmcp = { version = "0.12", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
open = "5.0"
rand = "0.8"
ratatui = { version = "0.30", features = [
    "crossterm_0_28",
    "unstable-rendered-line-info",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rice-sdk = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiny_http = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5"

[[bin]]
name = "memini"
path = "src/main.rs"
